--- a/exp/set/index.html
+++ b/exp/set/index.html
@@ -2,12 +2,11 @@
 <title>Set!</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="style.css">
 <body>
-<div style="text-align: center;">
-  <div style="display: inline-block;" id="main"></div>
-</div>
+<div id="main"></div>
 </body>
-<script src="./main.js"></script>
+<script src="Main.js"></script>
 <script>
 Elm.Main.embed(document.getElementById('main'));
 </script>
