--- a/exp/set/index.html
+++ b/exp/set/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="main"></div>
 </body>
-<script src="Main.js"></script>
+<script src="Main.js?v=1"></script>
 <script>
 Elm.Main.embed(document.getElementById('main'));
 </script>
